--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,13 @@
         <!-- footer -->
 
         <!-- end of footer --> */
+
+
+/* styles for our store */
+
+img {
+    margin-top: 10px;
+}
+
+
+/* end of styles for our store */
