--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,13 @@
     background-color: #F3DCDC;
 }
 
-.body {
+body {
     font-family: sans-serif, 'Segoe UI', "gabriella";
-}
 
+}
+h3{
+    background-color: transparent;
+}
 .navbar ul li {
     display: inline-block;
     list-style: none;
@@ -80,9 +83,9 @@ li{
 }
 
 .btn {
+    width: 100px;
     height: 60px;
-    width: 200px;
-    background: blue;
+    background-color: black;
     color: #fff;
     font-size: 32px;
     cursor: pointer;
