Provide correct carousel layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     font-family: "gabriela";
     background-color: #F3DCDC;
 }
+h3{
+    background-color: transparent;
+
+}
 
 .body {
     font-family: sans-serif, 'Segoe UI', "gabriella";
