--- a/css/fashion.css
+++ b/css/fashion.css
@@ -1,5 +1,6 @@
-body {
-    padding-bottom: 20px;
+* {
+    padding-bottom: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container {
