--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
     * {
         margin: 0;
         padding: 0;
+        padding-bottom: 5px;
         box-sizing: border-box;
-        font-family: "gabriela";
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: #F3DCDC;
     }
     
