--- a/css/fashion.css
+++ b/css/fashion.css
@@ -16,8 +16,9 @@ img {
 }
 
 #submit {
-    height: 60px;
-    width: 300px;
+    height: 30px;
+    width: 100px;
+    margin-left: 25%;
 }
 
 #submit:hover {
