--- a/css/furniture.css
+++ b/css/furniture.css
@@ -4,33 +4,33 @@
     box-sizing: border-box;
     background-color: #F3DCDC;
 }
-/*.navbar ul li {*/
-/*    display: inline-block;*/
-/*    list-style: none;*/
-/*    text-decoration: none;*/
-/*    font-weight: bold;*/
-/*    font-size: 30px;*/
-/*}*/
+.navbar ul li {
+    display: inline-block;
+    list-style: none;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 30px;
+}
 
-/*.navbar ul li a {*/
-/*    text-decoration: none;*/
-/*    color: black;*/
-/*    font-weight: bold;*/
-/*    padding: 10px 16px;*/
-/*}*/
+.navbar ul li a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    padding: 10px 16px;
+}
 
-/*.navbar ul li a:hover {*/
-/*    background-color: gray;*/
-/*    color: white;*/
-/*}*/
+.navbar ul li a:hover {
+    background-color: gray;
+    color: white;
+}
 
-/*.logo {*/
-/*    font-size: 30px;*/
-/*    font-family: "gabriella";*/
-/*    font-weight: bolder;*/
-/*    color: black;*/
-/*    text-decoration: none;*/
-/*}*/
+.logo {
+    font-size: 30px;
+    font-family: "gabriella";
+    font-weight: bolder;
+    color: black;
+    text-decoration: none;
+}
 
 #header {
     position: fixed;
@@ -113,4 +113,23 @@
 }
 .nav-menu a:hover span, .nav-menu li:hover > a span {
     display: block;
+}
+
+
+img {
+    margin-top: 12px;
+}
+
+img:hover {
+    transform: scale(0.8);
+}
+
+#submit {
+    height: 30px;
+    width: 100px;
+   margin-left: 25%;
+}
+
+#submit:hover {
+    background-color: pink;
 }
