--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,10 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: #F3DCDC;
     }
-    
+    html, body{
+        overflow-x: hidden;
+    }
+
     h3 {
         background-color: transparent;
     }
