feat- style- styles the furniture na bar

--- a/css/furniture.css
+++ b/css/furniture.css
@@ -220,7 +220,7 @@ img:hover {
 .header-1 .search-box-container label:hover{
     background:var(--black);
 }
-.header-2{
+.navbar{
     background: #fff;
     display: flex;
     align-items: center;
@@ -229,7 +229,7 @@ img:hover {
     box-shadow: 0.5rem;
 }
 
-.header-2.active{
+.navbar.active{
     position: fixed;
     top: 0; left: 0; right: 0;
     z-index: 10000;
