--- a/css/groceries.css
+++ b/css/groceries.css
@@ -374,13 +374,13 @@ section{
 
 
 
-#submit {
+.submit {
     height: 30px;
     width: 100px;
     margin-left: 25%;
 }
 
-#submit:hover {
+.submit:hover {
     background-color: pink;
 }
 
