--- a/css/furniture.css
+++ b/css/furniture.css
@@ -4,117 +4,6 @@
     box-sizing: border-box;
     background-color: #F3DCDC;
 }
-/*.navbar ul li {*/
-/*    display: inline-block;*/
-/*    list-style: none;*/
-/*    text-decoration: none;*/
-/*    font-weight: bold;*/
-/*    font-size: 30px;*/
-/*}*/
-
-/*.navbar ul li a {*/
-/*    text-decoration: none;*/
-/*    color: black;*/
-/*    font-weight: bold;*/
-/*    padding: 10px 16px;*/
-/*}*/
-
-/*.navbar ul li a:hover {*/
-/*    background-color: gray;*/
-/*    color: white;*/
-/*}*/
-
-/*.logo {*/
-/*    font-size: 30px;*/
-/*    font-family: "gabriella";*/
-/*    font-weight: bolder;*/
-/*    color: black;*/
-/*    text-decoration: none;*/
-/*}*/
-
-/*#header {*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    bottom: 0;*/
-/*    z-index: 9997;*/
-/*    transition: all 0.5s;*/
-/*    padding: 15px;*/
-/*    overflow-y: auto;*/
-/*}*/
-/*@media (max-width: 992px) {*/
-/*    #header {*/
-/*        width: 300px;*/
-/*        background: #fff;*/
-/*        border-right: 1px solid #e6e9ec;*/
-/*        left: -300px;*/
-/*    }*/
-/*}*/
-
-/*@media (min-width: 992px) {*/
-/*    #main {*/
-/*        margin-left: 100px;*/
-/*    }*/
-/*}*/
-/*.nav-menu {*/
-/*    padding: 0;*/
-/*    display: block;*/
-/*}*/
-/*.nav-menu * {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    list-style: none;*/
-/*}*/
-/*.nav-menu > ul > li {*/
-/*    position: relative;*/
-/*    white-space: nowrap;*/
-/*}*/
-/*.nav-menu a, .nav-menu a:focus {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    color: white;*/
-/*    padding: 10px 18px;*/
-/*    margin-bottom: 8px;*/
-/*    transition: 0.3s;*/
-/*    font-size: 25px;*/
-/*    border-radius: 50px;*/
-/*    background: black;*/
-/*    height: 56px;*/
-/*    width: 100%;*/
-/*    overflow: hidden;*/
-/*    transition: 0.3s;*/
-/*}*/
-/*.nav-menu a i, .nav-menu a:focus i {*/
-/*    font-size: 20px;*/
-/*}*/
-/*.nav-menu a span, .nav-menu a:focus span {*/
-/*    padding: 0 5px 0 7px;*/
-/*    color: #45505b;*/
-/*}*/
-/*@media (min-width: 992px) {*/
-/*    .nav-menu a, .nav-menu a:focus {*/
-/*        width: 56px;*/
-/*    }*/
-/*    .nav-menu a span, .nav-menu a:focus span {*/
-/*        display: none;*/
-/*        color: #fff;*/
-/*    }*/
-/*}*/
-/*.nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {*/
-/*    color: #fff;*/
-/*    background: black;*/
-/*}*/
-/*.nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {*/
-/*    color: #fff;*/
-/*}*/
-/*.nav-menu a:hover, .nav-menu li:hover > a {*/
-/*    width: 100%;*/
-/*    color: #fff;*/
-/*}*/
-/*.nav-menu a:hover span, .nav-menu li:hover > a span {*/
-/*    display: block;*/
-/*}*/
-
 
 img {
     margin-top: 12px;
@@ -124,13 +13,13 @@ img:hover {
     transform: scale(0.8);
 }
 
-#submit {
+.submit {
     height: 30px;
     width: 100px;
    margin-left: 25%;
 }
 
-#submit:hover {
+.submit:hover {
     background-color: pink;
 }
 .header{
