--- a/css/furniture.css
+++ b/css/furniture.css
@@ -6,320 +6,51 @@
 }
 
 
-/*.navbar ul li {*/
+.navbar ul li {
 
 
-/*    display: inline-block;*/
+    display: inline-block;
 
 
-/*    list-style: none;*/
+    list-style: none;
 
 
-/*    text-decoration: none;*/
+    text-decoration: none;
 
 
-/*    font-weight: bold;*/
+    font-weight: bold;
 
 
-/*    font-size: 30px;*/
+    font-size: 30px;
 
 
-/*}*/
+}
 
 
-/*.navbar ul li a {*/
+.navbar ul li a {
 
 
-/*    text-decoration: none;*/
+    text-decoration: none;
 
 
-/*    color: black;*/
+    color: black;
 
 
-/*    font-weight: bold;*/
+    font-weight: bold;
 
 
-/*    padding: 10px 16px;*/
+    padding: 10px 16px;
 
 
-/*}*/
+}
 
+.navbar ul li a:hover {
 
-/*.navbar ul li a:hover {*/
+    background-color: gray;
 
+    color: white;
 
-/*    background-color: gray;*/
-
-
-/*    color: white;*/
-
-
-/*}*/
-
-
-/*.logo {*/
-
-
-/*    font-size: 30px;*/
-
-
-/*    font-family: "gabriella";*/
-
-
-/*    font-weight: bolder;*/
-
-
-/*    color: black;*/
-
-
-/*    text-decoration: none;*/
-
-
-/*}*/
-
-
-/*#header {*/
-
-
-/*    position: fixed;*/
-
-
-/*    top: 0;*/
-
-
-/*    left: 0;*/
-
-
-/*    bottom: 0;*/
-
-
-/*    z-index: 9997;*/
-
-
-/*    transition: all 0.5s;*/
-
-
-/*    padding: 15px;*/
-
-
-/*    overflow-y: auto;*/
-
-
-/*}*/
-
-
-/*@media (max-width: 992px) {*/
-
-
-/*    #header {*/
-
-
-/*        width: 300px;*/
-
-
-/*        background: #fff;*/
-
-
-/*        border-right: 1px solid #e6e9ec;*/
-
-
-/*        left: -300px;*/
-
-
-/*    }*/
-
-
-/*}*/
-
-
-/*@media (min-width: 992px) {*/
-
-
-/*    #main {*/
-
-
-/*        margin-left: 100px;*/
-
-
-/*    }*/
-
-
-/*}*/
-
-
-/*.nav-menu {*/
-
-
-/*    padding: 0;*/
-
-
-/*    display: block;*/
-
-
-/*}*/
-
-
-/*.nav-menu * {*/
-
-
-/*    margin: 0;*/
-
-
-/*    padding: 0;*/
-
-
-/*    list-style: none;*/
-
-
-/*}*/
-
-
-/*.nav-menu > ul > li {*/
-
-
-/*    position: relative;*/
-
-
-/*    white-space: nowrap;*/
-
-
-/*}*/
-
-
-/*.nav-menu a, .nav-menu a:focus {*/
-
-
-/*    display: flex;*/
-
-
-/*    align-items: center;*/
-
-
-/*    color: white;*/
-
-
-/*    padding: 10px 18px;*/
-
-
-/*    margin-bottom: 8px;*/
-
-
-/*    transition: 0.3s;*/
-
-
-/*    font-size: 25px;*/
-
-
-/*    border-radius: 50px;*/
-
-
-/*    background: black;*/
-
-
-/*    height: 56px;*/
-
-
-/*    width: 100%;*/
-
-
-/*    overflow: hidden;*/
-
-
-/*    transition: 0.3s;*/
-
-
-/*}*/
-
-
-/*.nav-menu a i, .nav-menu a:focus i {*/
-
-
-/*    font-size: 20px;*/
-
-
-/*}*/
-
-
-/*.nav-menu a span, .nav-menu a:focus span {*/
-
-
-/*    padding: 0 5px 0 7px;*/
-
-
-/*    color: #45505b;*/
-
-
-/*}*/
-
-
-/*@media (min-width: 992px) {*/
-
-
-/*    .nav-menu a, .nav-menu a:focus {*/
-
-
-/*        width: 56px;*/
-
-
-/*    }*/
-
-
-/*    .nav-menu a span, .nav-menu a:focus span {*/
-
-
-/*        display: none;*/
-
-
-/*        color: #fff;*/
-
-
-/*    }*/
-
-
-/*}*/
-
-
-/*.nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {*/
-
-
-/*    color: #fff;*/
-
-
-/*    background: black;*/
-
-
-/*}*/
-
-
-/*.nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {*/
-
-
-/*    color: #fff;*/
-
-
-/*}*/
-
-
-/*.nav-menu a:hover, .nav-menu li:hover > a {*/
-
-
-/*    width: 100%;*/
-
-
-/*    color: #fff;*/
-
-
-/*}*/
-
-
-/*.nav-menu a:hover span, .nav-menu li:hover > a span {*/
-
-
-/*    display: block;*/
-
-
-/*}*/
-
+}
 img {
     margin-top: 12px;
 }
@@ -379,79 +110,6 @@ img:hover {
     color: var(--green);
 }
 
-
-/* .header-1 .search-box-container {
-    background-color: transparent;
-    display: flex;
-    height: 5rem;
-}
-
-.header-1 .search-box-container #search-box {
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-    font-size: 2rem;
-    color: #333;
-    border: .1rem solid rgba(0, 0, 0, .3);
-    text-transform: none;
-}
-
-.header-1 .search-box-container label {
-    height: 100%;
-    width: 8rem;
-    font-size: 2.5rem;
-    line-height: 5rem;
-    color: #fff;
-    background: var(--green);
-    text-align: center;
-    cursor: pointer;
-}
-
-.header-1 .search-box-container label:hover {
-    background: var(--black);
-} */
-
-
-/* .navbar {
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem 9%;
-    box-shadow: 0.5rem;
-}
-
-.navbar.active {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 10000;
-}
-
-.header-2 .navbar a {
-    padding: .5rem 1.5rem;
-    font-size: 2rem;
-    border-radius: .5rem;
-    color: var(--black);
-    text-decoration: none;
-}
-
-.header-2 .navbar a:hover {
-    background: var(--green);
-    color: #fff;
-}
-
-.header-2 .icons a {
-    font-size: 2.5rem;
-    color: var(--black);
-    padding-left: 1rem;
-    text-decoration: none;
-}
-
-.header-2 .icons a:hover {
-    color: var(--green);
-} */
 
 .footer {
     padding: 70px 0;
